# Rumina

./: .gitignore  ADDITIONAL_OPTIMIZATIONS.md  Cargo.toml  Cargo.toml.bak  IMPLEMENTATION_SUMMARY.md  JIT_ANALYSIS.md  JIT_ANALYSIS_ZH.md  LSR_007_COMPLIANCE_REPORT.md  LSR_COMPLIANCE_REPORT.md  MONOREPO.md  OPTIMIZATION_QUICKSTART.md  OPTIMIZATION_SESSION_3.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY_CN.md  PERFORMANCE_REPORT.md  README.md  SESSION_2_SUMMARY.md  VM_ARCHITECTURE.md  VM_COMPATIBILITY_TEST_RESULTS.md  VM_REFACTORING_SUMMARY_CN.md  package.json  rolldown.config.js  test.js  test_lsr_compliance.lm  tsconfig.json
.github/workflows/: build.yml
benches/: vm_benchmark.rs
crates/rmvm/: Cargo.toml
crates/rmvm/src/: main.rs
crates/rumina/: Cargo.toml
crates/rumina/src/: ast.rs  bytecode_io.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  value.rs  vm.rs
crates/rumina/src/builtin/: cas.rs  utils.rs
crates/rumina/src/interpreter/: convert.rs  operators.rs
crates/ruminac/: Cargo.toml
crates/ruminac/src/: main.rs
docs/: basic.md  datatype.md  nternalfunctions.md
examples/: be_included.lm  cas.lm  defin.lm  include_other.lm  struct.lm
rmvm/: Cargo.toml
rmvm/src/: lib.rs  main.rs
rumina-cli/: Cargo.toml
rumina-cli/src/: main.rs
ruminac/: Cargo.toml
ruminac/src/: compiler.rs  lib.rs  main.rs  optimizer.rs
scripts/: sync-wasm-bindings.js
src/: ast.rs  bindings.ts  bytecode_optimizer.rs  compiler.rs  error.rs  index.ts  interpreter.rs  lexer.rs  lib.rs  main.rs  optimizer.rs  parser.rs  token.rs  value.rs  value_ops.rs  vm.rs  vm_ops.rs  wasm.rs
src/builtin/: array.rs  cas.rs  cas.rs.bak  math.rs  mod.rs  random.rs  string.rs  time.rs  utils.rs
src/interpreter/: call.rs  convert.rs  expr.rs  operators.rs  stmt.rs
tests/: include_tests.rs  lsr_007_verification.rs  math_tests.rs  parallel_power_tests.rs  performance_tests.rs
