[workspace]
members = [
    "crates/rumina",
    "crates/ruminac",
    "crates/rmvm",
]
resolver = "2"

[workspace.package]
version = "1.1.1"
edition = "2024"
license = "LGPL-2.1"
authors = ["Rumina Contributors"]

[workspace.dependencies]
# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
