[workspace]
members = [".", "ruminac", "rmvm", "rumina-cli"]
resolver = "2"

[package]
name = "rumina"
version = "1.1.1"
edition = "2024"
description = "Lamina language compatible interpreter written in rust"
license = "LGPL-2.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num = "^0.4"
rand = "^0.9"
chrono = "^0.4"
lazy_static = "^1.4"
mathcore = "^0.3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "^3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "^0.2"
getrandom = { version = "^0.3", features = ["wasm_js"] }

[dev-dependencies]
criterion = "^0.7"
ruminac = { path = "ruminac" }
