[package]
name = "rmvm"
version = "1.1.1"
edition = "2024"
description = "Rumina VM - executes .rmc bytecode files"
license = "LGPL-2.1"

[lib]
name = "rmvm"
path = "src/lib.rs"

[[bin]]
name = "rmvm"
path = "src/main.rs"

[dependencies]
rumina = { path = ".." }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "^3"
