[package]
name = "rumina-cli"
version = "1.1.1"
edition = "2024"
description = "Rumina CLI - Lamina language interpreter with REPL"
license = "LGPL-2.1"

[[bin]]
name = "rumina-cli"
path = "src/main.rs"

[dependencies]
rumina = { path = ".." }
ruminac = { path = "../ruminac" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "^3"
