[package]
name = "rumina"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lamina language compatible interpreter written in rust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num = "^0.4"
rand = "^0.9"
chrono = "^0.4"
lazy_static = "^1.4"
mathcore = "^0.3.1"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "^3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "^0.2"
getrandom = { version = "^0.3", features = ["wasm_js"] }

[dev-dependencies]
criterion = "^0.7"
